Gramatica SLR.txt
<Program>::= <Decl>+
<Decl>::= <VariableDecl>
<Decl>::= <FunctionDecl>
<Decl>::= <ConstDecl>
<Decl>::= <ClassDecl>
<Decl>::= <InterfaceDecl>
<VariableDecl>::= <Variable>";"
<Variable>::= <Type> ident
<ConstDecl>::= "static" <ConstType> ident;
<ConstType>::= "int"
<ConstType>::= "double"
<ConstType>::= "boolean"
<ConstType>::= "string"
<Type>::= "int"
<Type>::= "double"
<Type>::= "boolean"
<Type>::= "string"
<Type>::= ident
<Type>::= "Type[]"
<FunctionDecl>::= <Type> ident "("<Formals>")" <StmtBlock> 
<FunctionDecl>::= "void" ident "("<Formals>")" <StmtBlock>
<Formals>::= Variable "," <Formals> 
<Formals>::= Variable
<ClassDecl>::= "class" ident "<extends" ident">" <implements ident+ , > { <Field>* }
<Field>::= <VariableDecl>
<Field>::= <FunctionDecl>
<Field>::= <ConstDecl>
<InterfaceDecl>::= "interface" ident { <Prototype>* }
<Prototype>::= <Type> ident {<Formals>}"; "
<Prototype>::= "void" ident {<Formals>*}";"
<StmtBlock>::= { <VariableDecl>* <ConstDecl>* <Stmt>* }
<Stmt>::= <Expr> ";"
<Stmt>::= <IfStmt>
<Stmt>::= <WhileStmt>
<Stmt>::= <ForStmt>
<Stmt>::= <BreakStmt>
<Stmt>::= <ReturnStmt>
<Stmt>::= <PrintStmt>
<Stmt>::= <StmtBlock>
<IfStmt>::= "if"(<Expr>) <Stmt> "else" <Stmt>
<WhileStmt>::= "while("<Expr>")" <Stmt>
<ForStmt>::= "for("<Expr>";"<Expr>";"<Expr>")" <Stmt>
<ReturnStmt>::= "return" <Expr>;
<BreakStmt>::= "break";
<PrintStmt>::= "System.out.println("<Expr>+",)";
<Expr>::= LValue = <Expr>
<Expr>::= Constant
<Expr>::= <LValue>
<Expr>::= this
<Expr>::= "("<Expr>")" 
<Expr>::= <Expr>"+"<Expr> 
<Expr>::= <Expr>"*"<Expr>
<Expr>::= <Expr>"%"<Expr>
<Expr>::= "-"<Expr>
<Expr>::= <Expr>"<"<Expr>
<Expr>::= <Expr>"<="<Expr>
<Expr>::= <Expr>"=="<Expr>
<Expr>::= <Expr>"||"<Expr>
<Expr>::= "!"<Expr> 
<Expr>::= "New("ident")"
<LValue>::= ident
<LValue>::= <Expr>"."ident
<Constant>::= "intConstant"
<Constant>::= "doubleConstant"
<Constant>::= "booleanConstant"
<Constant>::= "stringConstant"
<Constant>::= "null"
